fixup intro layout on small screens

--- a/src/plugins/Intro/edit.css
+++ b/src/plugins/Intro/edit.css
@@ -5,8 +5,8 @@
     --toolbar-bg: #e8e8e8;
     --toolbar-border: #d7d7d7;
     --active: #f93;
-    --frame-width: 1024px;
-    --frame-height: 768px;
+    --frame-width: 100%;
+    --frame-height: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -35,13 +35,17 @@ body {
     background-color: #ddebf8;
     color: var(--text-color);
     font-size: var(--text-size);
+    display: flex;
+    flex-direction: column;
 }
 
 main {
     margin: 1rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex: 1;
 }
 
 
@@ -61,21 +65,21 @@ nav>span:last-of-type {
     white-space: nowrap;
 }
 
-@media screen and (max-width: 768px) {
-    :root {
-        --text-size: 16px;
-    }
-}
+
 
 .slider {
     /* from https://css-tricks.com/css-only-carousel/ */
     width: var(--frame-width);
     text-align: center;
     overflow: hidden;
+    display:  flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .slides {
     display: flex;
+    flex: 1;
 
     overflow-x: auto;
     scroll-snap-type: x mandatory;
@@ -112,7 +116,7 @@ nav>span:last-of-type {
     border-radius: 10px;
 }
 
-.slider > a {
+.links > a {
     color: inherit;
     display: inline-flex;
     width: 1.5rem;
@@ -126,25 +130,32 @@ nav>span:last-of-type {
     position: relative;
     box-shadow: 0 2px 4px rgba(0,0,0,.25);
 }
-.slider > a:active {
+.links > a:active {
     top: 1px;
 }
-.slider > a:focus {
+.links > a:focus {
     background: #000;
     color: white;
 }
-.slider > a.active {
+.links > a.active {
     background-color: var(--active);
 }
 
 @supports (scroll-snap-type) {
-    .slider > a {
+    .links > a {
         display: none;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
+    :root {
+        --text-size: 16px;
+    }
+}
+
+@media screen and (max-width: 768px) {
     :root {
         --frame-width: 100%;
+        --frame-height: 75%;
     }
 }
